Fix spacing on .author

--- a/style.css
+++ b/style.css
@@ -148,9 +148,11 @@ img {
 }
 
 .author {
+    display: flex;
+    width: 800px;
+    justify-content: flex-end;
     font-size: 24px;
     font-weight: 800;
-    margin: 0 0 0 auto;
 }
 
 .four {
